# prism-q

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: ci.yml  docs.yml  label.yml  python.yml  release.yml
benches/: README.md  bench_driver.rs  bench_gpu.rs  bench_shots_perf.rs  circuits.rs  qec_t_strategies.rs  svd_bench.rs
benches/common/: mod.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/prism_q/: __init__.py  _prism_q.pyi
bindings/python/src/: backend.rs  circuit.rs  error.rs  gate.rs  lib.rs  noise.rs  numpy_util.rs  qec.rs  sim.rs
bindings/python/tests/: test_backends.py  test_core.py  test_gradient.py  test_noise.py  test_qec.py
docs/: SUMMARY.md  architecture.md  benchmarks.md  book.toml  glossary.md  overview.md
docs/architecture/: api-surface.md  backends.md  engine.md  fusion.md  ir.md  overview.md  qec-ir.md  samplers.md  threading-simd.md
docs/getting-started/: choosing-a-backend.md  first-circuit.md  install.md  shots.md
docs/guides/: backends.md  capabilities.md  clifford-t.md  gpu.md  openqasm.md  performance.md  qec.md
docs/reference/: builders.md
docs/theme/: custom.css  head.hbs
examples/: backends.rs  bell_state.rs  bench_gpu_dispatch.rs  bench_gpu_vs_cpu.rs  bench_sparse_det.rs  bench_stabilizer.rs  bench_suite.rs  dist_mpi_check.rs  gen_doc_diagrams.rs  profile_chunked_memory.rs  profile_circuit.rs  qft.rs  shots.rs
scripts/: bench_baseline.ps1  bench_baseline.sh  bench_check.ps1  bench_check.sh  bench_ci.sh  bench_compare.ps1  bench_compare.sh  flamegraph.ps1  flamegraph.sh  flamegraph_report.ps1  mpi-env.ps1  test-mpi.ps1
src/: circuits.rs  error.rs  lib.rs
src/backend/: density_matrix.rs  memory.rs  mod.rs  mps.rs  product.rs  simd.rs  sparse.rs  stabilizer.rs  tensornetwork.rs  word_ops.rs
src/backend/distributed_statevector/: mod.rs  tests.rs
src/backend/factored/: mod.rs  tests.rs
src/backend/factored_stabilizer/: mod.rs  tests.rs
src/backend/stabilizer/: kernels.rs  mod.rs  tests.rs
src/backend/stabilizer/kernels/: batch.rs  mod.rs  rowops.rs  simd.rs
src/backend/statevector/: kernels.rs  mod.rs  tests.rs
src/circuit/: builder.rs  draw.rs  expr.rs  fusion.rs  fusion_phase.rs  fusion_rzz.rs  mod.rs  openqasm.rs  openqasm_tests.rs  svg.rs
src/distributed/: comm.rs  mod.rs
src/gates/: mod.rs
src/gpu/: device.rs  memory.rs  mod.rs
src/gpu/kernels/: bts.rs  dense.rs  mod.rs  stabilizer.rs
src/qec/: camps_prefix.rs  cut_selection.rs  mod.rs  noise.rs  observable_reroute.rs  parse.rs  result.rs  runner.rs  t_sampler.rs
src/sim/: compiled.rs  decomposed.rs  dispatch.rs  gradient.rs  homological.rs  mod.rs  noise.rs  probability.rs  quasi_prob.rs  shots.rs  stabilizer_rank.rs  terminal_sampling.rs  trajectory.rs  unified_pauli.rs
src/sim/compiled/: accumulator.rs  bts.rs  mod.rs  parity.rs  propagation.rs  rng.rs  sign_truth_table_tests.rs  tests.rs
tests/: backend_matrix.rs  density_matrix_correctness.rs  expectation_gradient.rs  expectation_values.rs  expectation_values_oversize.rs  factored_correctness.rs  fusion_correctness.rs  golden_gpu.rs  golden_small_circuits.rs  measurement_matrix.rs  mps_correctness.rs  noise_validation.rs  openqasm_goldens.rs  pauli_joint_observable.rs  product_correctness.rs  qec_e2e_d3.rs  qec_exp_val.rs  qec_ir.rs  qec_noisy_validation.rs  qec_observable_reroute.rs  qec_t_correctness.rs  qft_expansion_regression.rs  smoke_openqasm.rs  sparse_correctness.rs  stabilizer_correctness.rs  tensornetwork_correctness.rs  trajectory_correctness.rs
tests/common/: circuits.rs  framework.rs  matrix.rs  mod.rs
tests/qec_common/: mod.rs
