[package]
name = "prism-q"
version = "0.2.2"
edition = "2021"
rust-version = "1.75.0"
authors = ["A. Coull"]
description = "PRISM-Q — Performance Rust Interoperable Simulator for Quantum"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/prism-q"
repository = "https://github.com/AbeCoull/prism-q"
homepage = "https://github.com/AbeCoull/prism-q"
keywords = ["quantum", "simulator", "openqasm", "circuit", "statevector"]
categories = ["science", "simulation"]

[dependencies]
num-complex = "0.4"
rand = "0.9.3"
rand_chacha = "0.9.0"
smallvec = "1"
thiserror = "1"
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
faer = { version = "0.20", optional = true, default-features = false, features = ["std", "rayon", "linalg"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
approx = "0.5"
proptest = "1"
test-case = "3"
pretty_assertions = "1"

[features]
default = []
parallel = ["rayon", "num_cpus", "faer"]
serialization = ["serde", "serde_json"]
bench-fast = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "v{{version}}"]
sign-commit = false
sign-tag = false
push-remote = "origin"
publish = true
pre-release-commit-message = "chore(release): {{version}}"
tag-message = "{{version}}"
tag-prefix = "v"
tag = true

[[bench]]
name = "bench_driver"
harness = false

[[bench]]
name = "circuits"
harness = false

[[bench]]
name = "svd_bench"
harness = false

[[bench]]
name = "bench_shots_perf"
harness = false
