[package]
name = "prism-q"
version = "0.25.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["A. Coull"]
description = "PRISM-Q: Performance Rust Interoperable Simulator for Quantum"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/prism-q"
repository = "https://github.com/AbeCoull/prism-q"
homepage = "https://github.com/AbeCoull/prism-q"
keywords = ["quantum", "quantum-computing", "simulator", "stabilizer", "qec"]
categories = ["science", "science::quantum-computing", "simulation", "mathematics"]

[workspace]
members = [".", "bindings/python"]
default-members = ["."]
resolver = "3"

[dependencies]
num-complex = "0.4"
rand = "0.10"
rand_chacha = "0.10"
smallvec = "1"
thiserror = "2"
rayon = { version = "1.12", optional = true }
num_cpus = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
faer = { version = "0.24", optional = true, default-features = false, features = ["std", "rayon", "linalg"] }
cudarc = { version = "0.19", optional = true, default-features = false, features = ["cuda-12040", "dynamic-linking", "driver", "nvrtc", "std"] }
mpi = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[features]
default = ["parallel"]
parallel = ["rayon", "num_cpus", "faer"]
serialization = ["serde", "serde_json"]
gpu = ["dep:cudarc"]
distributed = []
distributed-mpi = ["distributed", "dep:mpi"]
bench-fast = []
bench-internal = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
strip = "none"

# Dedicated profile for the Python bindings (bindings/python). PyO3 converts a
# Rust panic into a Python exception at the FFI boundary via stack unwinding,
# which `[profile.release] panic = "abort"` would defeat (a panic would abort
# the interpreter instead of raising). Cargo profiles are workspace-global, so
# maturin targets this profile to build the cdylib with unwinding while the main
# crate's own release builds and benchmarks keep `panic = "abort"`.
[profile.python-release]
inherits = "release"
panic = "unwind"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "v{{version}}"]
sign-commit = false
sign-tag = false
push-remote = "origin"
publish = true
pre-release-commit-message = "chore(release): {{version}}"
tag-name = "v{{version}}"
tag-message = "{{version}}"
tag = true

[[bench]]
name = "bench_driver"
harness = false

[[bench]]
name = "circuits"
harness = false

[[bench]]
name = "svd_bench"
harness = false

[[bench]]
name = "bench_shots_perf"
harness = false

[[bench]]
name = "bench_gpu"
harness = false
required-features = ["gpu"]

[[example]]
name = "dist_mpi_check"
required-features = ["distributed-mpi"]

[[bench]]
name = "qec_t_strategies"
harness = false
