[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "prism-q"
description = "PRISM-Q: performance-first quantum circuit simulator (Python bindings)"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.23"]
keywords = [
    "quantum",
    "quantum-computing",
    "quantum-simulator",
    "simulator",
    "openqasm",
    "stabilizer",
    "qec",
    "statevector",
    "simd",
    "gpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/AbeCoull/prism-q"
Documentation = "https://abecoull.github.io/prism-q/"
Repository = "https://github.com/AbeCoull/prism-q"
Changelog = "https://github.com/AbeCoull/prism-q/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "prism_q._prism_q"
python-source = "python"
profile = "python-release"
strip = true
